[project]
name = "comfyui_ab_samplercustom"
description = "Experimental sampler node. Sampling alternates between A and B inputs until only one remains, starting with A. B steps run over a 2x2 grid, where 3/4's of the grid are copies of the original input latent. When the optional mask is used, the region outside the defined roi is copied from the original latent at the end of every step. Disclaimer: its applications should be rather niche and there are likely better alternative approaches."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/bmad4ever/comfyui_ab_samplercustom"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "bmad4ever"
DisplayName = "comfyui_ab_samplercustom"
Icon = ""
